syntax = "proto3";

message MqProtocolMessage {
  int64 msg_id = 1;
  int32 seq_id = 2;
  bytes message = 3;
  string sender_id = 4;
}